// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Maps state to props only using selectors validates object created from mapStateToProps 1`] = `
Object {
  "defaultFilters": Object {
    "groups": Array [
      Object {
        "id": "active",
        "value": "enabled",
      },
    ],
    "messageTemplates": Array [
      Object {
        "id": "active",
        "value": "enabled",
      },
    ],
    "outboundIdentifierLists": Array [
      Object {
        "id": "active",
        "value": "enabled",
      },
    ],
    "reasonLists": Array [
      Object {
        "id": "active",
        "value": "enabled",
      },
    ],
    "skills": Array [
      Object {
        "id": "active",
        "value": "enabled",
      },
    ],
    "transferLists": Array [
      Object {
        "id": "active",
        "value": "enabled",
      },
    ],
  },
  "groupsFetching": undefined,
  "groupsFields": Array [
    Object {
      "label": "Name",
      "name": "name",
    },
    Object {
      "label": "Description",
      "name": "description",
    },
    Object {
      "filterOptions": Array [
        "enabled",
        "disabled",
      ],
      "label": "Status",
      "name": "active",
      "type": "select",
    },
  ],
  "groupsItems": Array [],
  "messageTemplatesFetching": undefined,
  "messageTemplatesFields": Array [
    Object {
      "label": "Name",
      "name": "name",
    },
    Object {
      "label": "Description",
      "name": "description",
    },
    Object {
      "filterOptions": Array [
        "enabled",
        "disabled",
      ],
      "label": "Status",
      "name": "active",
      "type": "select",
    },
  ],
  "messageTemplatesItems": Array [],
  "outboundIdentifierListsFetching": undefined,
  "outboundIdentifierListsFields": Array [
    Object {
      "label": "Name",
      "name": "name",
    },
    Object {
      "label": "Description",
      "name": "description",
    },
    Object {
      "filterOptions": Array [
        "enabled",
        "disabled",
      ],
      "label": "Status",
      "name": "active",
      "type": "select",
    },
  ],
  "outboundIdentifierListsItems": Array [],
  "reasonListsFetching": undefined,
  "reasonListsFields": Array [
    Object {
      "label": "Name",
      "name": "name",
    },
    Object {
      "label": "Description",
      "name": "description",
    },
    Object {
      "filterOptions": Array [
        "enabled",
        "disabled",
      ],
      "label": "Status",
      "name": "active",
      "type": "select",
    },
  ],
  "reasonListsItems": Array [],
  "sidePanelPermissions": Object {
    "groups": undefined,
    "messageTemplates": undefined,
    "outboundIdentifierLists": undefined,
    "reasonLists": undefined,
    "skills": undefined,
    "transferLists": undefined,
  },
  "skillsFetching": undefined,
  "skillsFields": Array [
    Object {
      "label": "Name",
      "name": "name",
    },
    Object {
      "label": "Description",
      "name": "description",
    },
    Object {
      "filterOptions": Array [
        "enabled",
        "disabled",
      ],
      "label": "Status",
      "name": "active",
      "type": "select",
    },
    Object {
      "actions": Object {
        "onChange": [Function],
      },
      "editable": undefined,
      "filterable": false,
      "label": "Proficiency",
      "name": "proficiency",
    },
  ],
  "skillsItems": Array [],
  "transferListsFetching": undefined,
  "transferListsFields": Array [
    Object {
      "label": "Name",
      "name": "name",
    },
    Object {
      "label": "Description",
      "name": "description",
    },
    Object {
      "filterOptions": Array [
        "enabled",
        "disabled",
      ],
      "label": "Status",
      "name": "active",
      "type": "select",
    },
  ],
  "transferListsItems": Array [],
  "userHasUpdatePermission": true,
}
`;

exports[`UsersDetailsPanel Renders renders 1`] = `
<UsersDetailsPanel
  defaultFilters={
    Object {
      "groups": Array [
        Object {
          "id": "active",
          "value": "enabled",
        },
      ],
      "messageTemplates": Array [
        Object {
          "id": "active",
          "value": "enabled",
        },
      ],
      "outboundIdentifierLists": Array [
        Object {
          "id": "active",
          "value": "enabled",
        },
      ],
      "reasonLists": Array [
        Object {
          "id": "active",
          "value": "enabled",
        },
      ],
      "skills": Array [
        Object {
          "id": "active",
          "value": "enabled",
        },
      ],
      "transferLists": Array [
        Object {
          "id": "active",
          "value": "enabled",
        },
      ],
    }
  }
  groupsFields={
    Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
      Object {
        "filterOptions": Array [
          "enabled",
          "disabled",
        ],
        "label": "Status",
        "name": "active",
        "type": "select",
      },
    ]
  }
  groupsItems={Array []}
  messageTemplatesFields={
    Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
      Object {
        "filterOptions": Array [
          "enabled",
          "disabled",
        ],
        "label": "Status",
        "name": "active",
        "type": "select",
      },
    ]
  }
  messageTemplatesItems={Array []}
  outboundIdentifierListsFields={
    Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
      Object {
        "filterOptions": Array [
          "enabled",
          "disabled",
        ],
        "label": "Status",
        "name": "active",
        "type": "select",
      },
    ]
  }
  outboundIdentifierListsItems={Array []}
  reasonListsFields={
    Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
      Object {
        "filterOptions": Array [
          "enabled",
          "disabled",
        ],
        "label": "Status",
        "name": "active",
        "type": "select",
      },
    ]
  }
  reasonListsItems={Array []}
  removeListItem={[Function]}
  setSelectedSubEntityId={[Function]}
  sidePanelPermissions={
    Object {
      "groups": undefined,
      "messageTemplates": undefined,
      "outboundIdentifierLists": undefined,
      "reasonLists": undefined,
      "skills": undefined,
      "transferLists": undefined,
    }
  }
  skillsFields={
    Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
      Object {
        "filterOptions": Array [
          "enabled",
          "disabled",
        ],
        "label": "Status",
        "name": "active",
        "type": "select",
      },
      Object {
        "actions": Object {
          "onChange": [Function],
        },
        "editable": undefined,
        "filterable": false,
        "label": "Proficiency",
        "name": "proficiency",
      },
    ]
  }
  skillsItems={Array []}
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      },
      "unsubscribe": [Function],
    }
  }
  transferListsFields={
    Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
      Object {
        "filterOptions": Array [
          "enabled",
          "disabled",
        ],
        "label": "Status",
        "name": "active",
        "type": "select",
      },
    ]
  }
  transferListsItems={Array []}
  userHasUpdatePermission={true}
>
  Child
</UsersDetailsPanel>
`;
